--- a/Drum Kit/drumkit.css
+++ b/Drum Kit/drumkit.css
@@ -16,31 +16,31 @@ footer {
 }
 
 .a {
-  background-image: url(images/tom1.png);
+  background-image: url(source/images/tom1.png);
 }
 
 .s {
-  background-image: url(images/tom2.png);
+  background-image: url(source/images/tom2.png);
 }
 
 .d {
-  background-image: url(images/tom3.png);
+  background-image: url(source/images/tom3.png);
 }
 
 .f {
-  background-image: url(images/tom4.png);
+  background-image: url(source/images/tom4.png);
 }
 
 .g {
-  background-image: url(images/crash.png);
+  background-image: url(source/images/crash.png);
 }
 
 .h {
-  background-image: url(images/kick.png);
+  background-image: url(source/images/kick.png);
 }
 
 .j {
-  background-image: url(images/snare.png);
+  background-image: url(source/images/snare.png);
 }
 
 .set {
